migrate to storage track2